--- a/trabalho11/ex2/index.html
+++ b/trabalho11/ex2/index.html
@@ -48,9 +48,11 @@
 
     async function buscaEndereco(cep) {   
       if (cep.length != 9) return;
+      //const url = "https://viacep.com.br/ws/" + cep + "/json/";
+      const url = `https://viacep.com.br/ws/${cep}/json/`;	
 
       try {
-        let response = await fetch("busca-endereco.php?cep=" + cep);
+        let response = await fetch(url);
         if (!response.ok) throw new Error(response.statusText);
         var endereco = await response.json();
       }
@@ -60,9 +62,9 @@
       }
 
       let form = document.querySelector("form");
-      form.rua.value = endereco.rua;
+      form.rua.value = endereco.logradouro;
       form.bairro.value = endereco.bairro;
-      form.cidade.value = endereco.cidade;
+      form.cidade.value = endereco.localidade;
     }
 
     window.onload = function () {
