--- a/trabalho11/ex3/index.html
+++ b/trabalho11/ex3/index.html
@@ -136,16 +136,16 @@
             <div class="col-md-8 offset-md-2 mt-2">
                 <h3 class="mb-3">b&#41; Prints:</h3>
                 <div class="mb-3">
-                    <h5>Inicio:</h5>
-                    <a href="images/ex1-b-inicio.png" target="_blank" rel="noopener noreferrer">
-                        <img src="images/ex1-b-inicio.png" alt="print do inicio do item b" class="img-fluid"
+                    <h5>Inicio (com corpo dos response 1 e 2):</h5>
+                    <a href="images/ex3-b-inicio.png" target="_blank" rel="noopener noreferrer">
+                        <img src="images/ex3-b-inicio.png" alt="print do inicio do item b" class="img-fluid"
                             title="Inicio da execução">
                     </a>
                 </div>
                 <div class="mb-3">
-                    <h5>Fim:</h5>
-                    <a href="images/ex1-b-fim.png" target="_blank" rel="noopener noreferrer">
-                        <img src="images/ex1-b-fim.png" alt="print do fim do item b" class="img-fluid"
+                    <h5>Fim (com promise fullfilled):</h5>
+                    <a href="images/ex3-b-fim.png" target="_blank" rel="noopener noreferrer">
+                        <img src="images/ex3-b-fim.png" alt="print do fim do item b" class="img-fluid"
                             title="Fim da execução">
                     </a>
                 </div>
