--- a/trabalho11/ex1/index.html
+++ b/trabalho11/ex1/index.html
@@ -94,14 +94,14 @@
             <div class="col-md-8 offset-md-2 mt-2">
                 <h3 class="mb-3">b&#41; Prints:</h3>
                 <div class="mb-3">
-                    <h5>Inicio:</h5>
+                    <h5>Inicio (corpo do response):</h5>
                     <a href="images/ex1-b-inicio.png" target="_blank" rel="noopener noreferrer">
                         <img src="images/ex1-b-inicio.png" alt="print do inicio do item b" class="img-fluid"
                             title="Inicio da execução">
                     </a>
                 </div>
                 <div class="mb-3">
-                    <h5>Fim:</h5>
+                    <h5>Fim (promise fullfilled e endereco preenchido):</h5>
                     <a href="images/ex1-b-fim.png" target="_blank" rel="noopener noreferrer">
                         <img src="images/ex1-b-fim.png" alt="print do fim do item b" class="img-fluid"
                             title="Fim da execução">
