ex5 and some adjusts

--- a/trabalho11/ex3/index.html
+++ b/trabalho11/ex3/index.html
@@ -45,10 +45,10 @@
     <div class="container py-4">
         <div class="row justify-content-center">
             <h1 class="mb-4 text-center">Exercício 3</h1>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="list-group">
                     <a href="./Ex4-encadeamento-await/"
-                        class="list-group-item list-group-item-action">Ex4-encadeamento-await</a>
+                        class="list-group-item list-group-item-action text-center">Ex4-encadeamento-await</a>
                 </div>
             </div>
         </div>
