--- a/trabalho11/ex1/index.html
+++ b/trabalho11/ex1/index.html
@@ -45,9 +45,9 @@
     <div class="container py-4">
         <div class="row justify-content-center">
             <h1 class="mb-4 text-center">Exercício 1</h1>
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <div class="list-group">
-                    <a href="./Ex3-cep-await/" class="list-group-item list-group-item-action">Ex3-cep-await</a>
+                    <a href="./Ex3-cep-await/" class="list-group-item list-group-item-action text-center">Ex3-cep-await</a>
                 </div>
             </div>
         </div>
