sort fix to trabalhos index

--- a/files/aulas/index.html
+++ b/files/aulas/index.html
@@ -46,13 +46,13 @@
                         Módulo 4 - Bootstrap - Responsividade
                     </a>
                     <a href="PPI-Modulo5-jQuery.pdf" class="list-group-item list-group-item-action">
-                        Módulo 5 - jQuery
+                        Módulo 5 (Extra) - jQuery
                     </a>
                     <a href="PPI-Modulo5-PHP.pdf" class="list-group-item list-group-item-action">
-                        Módulo 6 - PHP
+                        Módulo 5 - PHP
                     </a>
                     <a href="PPI-Modulo6-MySQL-PHP.pdf" class="list-group-item list-group-item-action">
-                        Módulo 7 - MySQL - PHP
+                        Módulo 6 - MySQL - PHP
                     </a>
                     <a href="PPI-Modulo7-AJAX-Parte1.pdf" class="list-group-item list-group-item-action">
                         Módulo 7 - AJAX - Parte 1
